--- a/index.html
+++ b/index.html
@@ -2,64 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>MY PORTFOLIO </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
     <header>
-        <nav class="navbar">
-            <div class="logo">My portfolio</div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+        <a href="#" class="logo">Vishal</a>
+        <nav>
+            <a href="#" class="active">Home</a>
+            <a href="#">services</a>
+            <a href="#">Eduction</a>
+            <a href="#">Skills</a>
+            <a href="#">Experience</a>
+            <a href="#">Contect</a>
         </nav>
     </header>
 
-    <section id="hero">
-        <div class="hero-content">
-            <H1>Hello,I'm VISHAL</H1>
-            <p>I'm passionate web developer.</p>
-            <a href="#contact" class="btn">Hire me</a>
+    <section class="Home">
+        <div Class="Home-img">
+            <img src="https://neural.love/cdn/ai-photostock/1ee962e6-136f-6fd6-b9f8-eb390b9e28d3/0.jpg?Expires=2019686399&Signature=EHyOk~ixEp-6GhUCBomL5XjRtHuD~E-TeRQJbcKz9jqr7YaHNM5007I8xHQ3JiRudZiTiZRjWHj5ANmRfxEh3yA0KXlZrB-WyCAqs9x6dulXNjDi1obI7kz667pXBlT9TXLYFxEBI4RJBpPcX~3z3NHwq6R42GhPCemK1dHN27joS7SGG~WQn338fIRq0j56KjC0~4elzuyy7sa2sWluoZ9sQQuvAPvXAv7JhwhZSLsUtnaAtRwu4xn2mvdU0OqyhjCTKQBCF1y5DVKBj3ItkODshfTDgKsVYWo~eRiBECe2VvJ2Jmm2K5MbpTaeTjQnTqz1IPEjxDpmhJtQNaNu0Q__&Key-Pair-Id=K2RFTOXRBNSROX">
         </div>
-    </section>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I'm a web developer specializing in creating clean and modern website. I enjoy solving problems and building interactive website.</p>
-    </section>
-
-    <section id="projects">
-        <h2>projects</h2>
-        <div class="project-grid">
-            <div class="project">
-                <h3>project 1</h3>
-                <p>personal portfolio website using HTML and CSS</p>
+        <div class="home-content">
+            <h1>Hi, It's <span>Vishal</span></h1>
+            <h3 class="typing-text">I'm a <span></span></h3>
+            <p>A programmer of HTML, CSS, Javascript, Python And Also A Passionate Web Devloper</p>
+            <p>B.Sc(Computer Science) Student 1st year</p>
+            <p>I can Build Any Website you Wan't</p>
+            <div class="Social-icons">
+                <a href="https://www.instagram.com/vishal_mi_shra/?igsh=MXRxOWU3a3gzYjUwdA%3D%3D#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.snapchat.com/add/v_ishal2007?share_id=ZK7LdIjrzfQ&locale=en-GB"><i class="fa-brands fa-snapchat"></i></a>
+                <a href="https://github.com/vishalmishra333"><i class="fa-brands fa-github"></i></a>
             </div>
+            <a Href="#" class="btn">Hire me</a>
         </div>
     </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul class="skills list">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>persuing javascript</li>
-            <li>responsive design</li>
-        </ul>
-    </section>
-
-    <section id="contect">
-        <h2>Contect Me</h2>
-    <p>Email:vishal859567@gmail.com</p>
-    <p>phone:+91 8595671396</p>
-    </section>
-    <footer>
-        <p>&#169; 2025 VISHAL. ALL RIGHTS RESERVED</p>
-    </footer>
 </body>
 </html>
